// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ranking helpers - [FILTER] [1] Should return a list filtered by women 1`] = `
[
  {
    "person": {
      "description": null,
      "isWoman": true,
      "name": "Julia Koch",
      "nid": "51714",
      "rankings": {
        "edges": [
          {
            "node": {
              "ranking": {
                "id": "bm9kZTo1MTcwOA==",
                "rankingType": "300_reichste",
                "year": 2023,
              },
              "rankingPosition": 6,
              "rankingValue": "100000000000",
            },
          },
        ],
      },
      "title": "Julia Koch",
    },
    "rankingIndustry": "Immobilien",
    "rankingPosition": 6,
    "rankingState": "USA",
    "rankingTrend": "new",
    "rankingValue": "100 Mrd.",
  },
  {
    "person": {
      "description": null,
      "isWoman": true,
      "name": "Wanda Muster",
      "nid": "19034",
      "rankings": {
        "edges": [
          {
            "node": {
              "ranking": {
                "id": "bm9kZTo1MTcwOA==",
                "rankingType": "300_reichste",
                "year": 2023,
              },
              "rankingPosition": 7,
              "rankingValue": "88000000000",
            },
          },
          {
            "node": {
              "ranking": {
                "id": "bm9kZToxOTAxMg==",
                "rankingType": "300_reichste",
                "year": 2016,
              },
              "rankingPosition": 3,
              "rankingValue": "11000000000",
            },
          },
        ],
      },
      "title": "Wanda Muster",
    },
    "rankingIndustry": "Food, Immobilien",
    "rankingPosition": 7,
    "rankingState": "USA",
    "rankingTrend": "returnee",
    "rankingValue": "88 Mrd.",
  },
]
`;

exports[`Ranking helpers - [FILTER] [2] Should return a list filtered by newcomer 1`] = `
[
  {
    "person": {
      "description": null,
      "isWoman": false,
      "name": "Larry Ellison",
      "nid": "51712",
      "rankings": {
        "edges": [
          {
            "node": {
              "ranking": {
                "id": "bm9kZTo1MTcwOA==",
                "rankingType": "300_reichste",
                "year": 2023,
              },
              "rankingPosition": 4,
              "rankingValue": "107000000000",
            },
          },
        ],
      },
      "title": "Larry Ellison",
    },
    "rankingIndustry": "Technologie",
    "rankingPosition": 4,
    "rankingState": "USA",
    "rankingTrend": "new",
    "rankingValue": "107 Mrd.",
  },
  {
    "person": {
      "description": null,
      "isWoman": false,
      "name": "Warren Buffett",
      "nid": "51713",
      "rankings": {
        "edges": [
          {
            "node": {
              "ranking": {
                "id": "bm9kZTo1MTcwOA==",
                "rankingType": "300_reichste",
                "year": 2023,
              },
              "rankingPosition": 5,
              "rankingValue": "106000000000",
            },
          },
        ],
      },
      "title": "Warren Buffett",
    },
    "rankingIndustry": "Finanzen & Investment",
    "rankingPosition": 5,
    "rankingState": "USA",
    "rankingTrend": "new",
    "rankingValue": "106 Mrd.",
  },
  {
    "person": {
      "description": null,
      "isWoman": true,
      "name": "Julia Koch",
      "nid": "51714",
      "rankings": {
        "edges": [
          {
            "node": {
              "ranking": {
                "id": "bm9kZTo1MTcwOA==",
                "rankingType": "300_reichste",
                "year": 2023,
              },
              "rankingPosition": 6,
              "rankingValue": "100000000000",
            },
          },
        ],
      },
      "title": "Julia Koch",
    },
    "rankingIndustry": "Immobilien",
    "rankingPosition": 6,
    "rankingState": "USA",
    "rankingTrend": "new",
    "rankingValue": "100 Mrd.",
  },
]
`;

exports[`Ranking helpers - [FILTER] [3] Should return a list filtered by returnees 1`] = `
[
  {
    "person": {
      "description": null,
      "isWoman": true,
      "name": "Wanda Muster",
      "nid": "19034",
      "rankings": {
        "edges": [
          {
            "node": {
              "ranking": {
                "id": "bm9kZTo1MTcwOA==",
                "rankingType": "300_reichste",
                "year": 2023,
              },
              "rankingPosition": 7,
              "rankingValue": "88000000000",
            },
          },
          {
            "node": {
              "ranking": {
                "id": "bm9kZToxOTAxMg==",
                "rankingType": "300_reichste",
                "year": 2016,
              },
              "rankingPosition": 3,
              "rankingValue": "11000000000",
            },
          },
        ],
      },
      "title": "Wanda Muster",
    },
    "rankingIndustry": "Food, Immobilien",
    "rankingPosition": 7,
    "rankingState": "USA",
    "rankingTrend": "returnee",
    "rankingValue": "88 Mrd.",
  },
]
`;

exports[`Ranking helpers - [FILTER] [4] Should return a list filtered by industry: Finanzen & Investment 1`] = `
[
  {
    "person": {
      "description": null,
      "isWoman": false,
      "name": "Warren Buffett",
      "nid": "51713",
      "rankings": {
        "edges": [
          {
            "node": {
              "ranking": {
                "id": "bm9kZTo1MTcwOA==",
                "rankingType": "300_reichste",
                "year": 2023,
              },
              "rankingPosition": 5,
              "rankingValue": "106000000000",
            },
          },
        ],
      },
      "title": "Warren Buffett",
    },
    "rankingIndustry": "Finanzen & Investment",
    "rankingPosition": 5,
    "rankingState": "USA",
    "rankingTrend": "new",
    "rankingValue": "106 Mrd.",
  },
]
`;

exports[`Ranking helpers - [FILTER] [4] Should return a list filtered by industry: Food 1`] = `
[
  {
    "person": {
      "description": null,
      "isWoman": true,
      "name": "Wanda Muster",
      "nid": "19034",
      "rankings": {
        "edges": [
          {
            "node": {
              "ranking": {
                "id": "bm9kZTo1MTcwOA==",
                "rankingType": "300_reichste",
                "year": 2023,
              },
              "rankingPosition": 7,
              "rankingValue": "88000000000",
            },
          },
          {
            "node": {
              "ranking": {
                "id": "bm9kZToxOTAxMg==",
                "rankingType": "300_reichste",
                "year": 2016,
              },
              "rankingPosition": 3,
              "rankingValue": "11000000000",
            },
          },
        ],
      },
      "title": "Wanda Muster",
    },
    "rankingIndustry": "Food, Immobilien",
    "rankingPosition": 7,
    "rankingState": "USA",
    "rankingTrend": "returnee",
    "rankingValue": "88 Mrd.",
  },
]
`;

exports[`Ranking helpers - [FILTER] [4] Should return a list filtered by industry: Immobilien 1`] = `
[
  {
    "person": {
      "description": null,
      "isWoman": true,
      "name": "Julia Koch",
      "nid": "51714",
      "rankings": {
        "edges": [
          {
            "node": {
              "ranking": {
                "id": "bm9kZTo1MTcwOA==",
                "rankingType": "300_reichste",
                "year": 2023,
              },
              "rankingPosition": 6,
              "rankingValue": "100000000000",
            },
          },
        ],
      },
      "title": "Julia Koch",
    },
    "rankingIndustry": "Immobilien",
    "rankingPosition": 6,
    "rankingState": "USA",
    "rankingTrend": "new",
    "rankingValue": "100 Mrd.",
  },
  {
    "person": {
      "description": null,
      "isWoman": true,
      "name": "Wanda Muster",
      "nid": "19034",
      "rankings": {
        "edges": [
          {
            "node": {
              "ranking": {
                "id": "bm9kZTo1MTcwOA==",
                "rankingType": "300_reichste",
                "year": 2023,
              },
              "rankingPosition": 7,
              "rankingValue": "88000000000",
            },
          },
          {
            "node": {
              "ranking": {
                "id": "bm9kZToxOTAxMg==",
                "rankingType": "300_reichste",
                "year": 2016,
              },
              "rankingPosition": 3,
              "rankingValue": "11000000000",
            },
          },
        ],
      },
      "title": "Wanda Muster",
    },
    "rankingIndustry": "Food, Immobilien",
    "rankingPosition": 7,
    "rankingState": "USA",
    "rankingTrend": "returnee",
    "rankingValue": "88 Mrd.",
  },
]
`;

exports[`Ranking helpers - [FILTER] [4] Should return a list filtered by industry: Möbel 1`] = `[]`;

exports[`Ranking helpers - [FILTER] [4] Should return a list filtered by industry: Technologie 1`] = `
[
  {
    "person": {
      "description": null,
      "isWoman": false,
      "name": "Elon Musk",
      "nid": "51710",
      "rankings": {
        "edges": [
          {
            "node": {
              "ranking": {
                "id": "bm9kZTo1MTcwOA==",
                "rankingType": "300_reichste",
                "year": 2023,
              },
              "rankingPosition": 2,
              "rankingValue": "180000000000",
            },
          },
          {
            "node": {
              "ranking": {
                "id": "bm9kZTo1MTcwOA==",
                "rankingType": "300_reichste",
                "year": 2022,
              },
              "rankingPosition": 2,
              "rankingValue": "179000000000",
            },
          },
        ],
      },
      "title": "Elon Musk",
    },
    "rankingIndustry": "Technologie",
    "rankingPosition": 2,
    "rankingState": "USA",
    "rankingValue": "180 Mrd.",
  },
  {
    "person": {
      "description": null,
      "isWoman": false,
      "name": "Jeff Bezos",
      "nid": "51711",
      "rankings": {
        "edges": [
          {
            "node": {
              "ranking": {
                "id": "bm9kZTo1MTcwOA==",
                "rankingType": "300_reichste",
                "year": 2023,
              },
              "rankingPosition": 3,
              "rankingValue": "114000000000",
            },
          },
          {
            "node": {
              "ranking": {
                "id": "bm9kZTo1MTcwOA==",
                "rankingType": "300_reichste",
                "year": 2022,
              },
              "rankingPosition": 3,
              "rankingValue": "112000000000",
            },
          },
        ],
      },
      "title": "Jeff Bezos",
    },
    "rankingIndustry": "Technologie",
    "rankingPosition": 3,
    "rankingState": "USA",
    "rankingValue": "114 Mrd.",
  },
  {
    "person": {
      "description": null,
      "isWoman": false,
      "name": "Larry Ellison",
      "nid": "51712",
      "rankings": {
        "edges": [
          {
            "node": {
              "ranking": {
                "id": "bm9kZTo1MTcwOA==",
                "rankingType": "300_reichste",
                "year": 2023,
              },
              "rankingPosition": 4,
              "rankingValue": "107000000000",
            },
          },
        ],
      },
      "title": "Larry Ellison",
    },
    "rankingIndustry": "Technologie",
    "rankingPosition": 4,
    "rankingState": "USA",
    "rankingTrend": "new",
    "rankingValue": "107 Mrd.",
  },
]
`;
